// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/terraform/extract extractPackageFile() extract helm releases 1`] = `
{
  "deps": [
    {
      "currentValue": "1.0.1",
      "datasource": "helm",
      "depName": "redis",
      "depType": "helm_release",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
    {
      "datasource": "helm",
      "depName": "redis",
      "depType": "helm_release",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
    {
      "datasource": "helm",
      "depName": "./charts/example",
      "depType": "helm_release",
      "registryUrls": [
        undefined,
      ],
      "skipReason": "local-chart",
    },
    {
      "currentValue": "4.0.1",
      "datasource": "helm",
      "depName": undefined,
      "depType": "helm_release",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
      "skipReason": "invalid-name",
    },
    {
      "currentValue": "5.0.1",
      "datasource": "helm",
      "depName": "redis",
      "depType": "helm_release",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
    {
      "currentValue": "6.0.1",
      "datasource": "helm",
      "depName": "redis",
      "depType": "helm_release",
      "registryUrls": [
        undefined,
      ],
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() extracts  modules 1`] = `
{
  "deps": [
    {
      "currentValue": "v1.0.0",
      "datasource": "github-tags",
      "depName": "github.com/hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "next",
      "datasource": "github-tags",
      "depName": "github.com/hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "tfmodule_one-v0.0.9",
      "datasource": "github-tags",
      "depName": "github.com/githubuser/myrepo",
      "depType": "module",
      "packageName": "githubuser/myrepo",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "github-tags",
      "depName": "github.com/hashicorp/example.2.3",
      "depType": "module",
      "packageName": "hashicorp/example.2.3",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "github-tags",
      "depName": "github.com/hashicorp/example.2.3",
      "depType": "module",
      "packageName": "hashicorp/example.2.3",
    },
    {
      "currentValue": "0.1.0",
      "datasource": "terraform-module",
      "depName": "hashicorp/consul/aws",
      "depType": "module",
    },
    {
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "github.com/hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "~> 1.1.0",
      "datasource": "terraform-module",
      "depName": "app.terraform.io/example-corp/k8s-cluster/azurerm",
      "depType": "module",
      "registryUrls": [
        "https://app.terraform.io",
      ],
    },
    {
      "currentValue": "~> 1.1",
      "datasource": "terraform-module",
      "depName": "app.terraform.io/example-corp/k8s-cluster/azurerm",
      "depType": "module",
      "registryUrls": [
        "https://app.terraform.io",
      ],
    },
    {
      "currentValue": "~~ 1.1",
      "datasource": "terraform-module",
      "depName": "app.terraform.io/example-corp/k8s-cluster/azurerm",
      "depType": "module",
      "registryUrls": [
        "https://app.terraform.io",
      ],
    },
    {
      "currentValue": ">= 1.0.0, <= 2.0.0",
      "datasource": "terraform-module",
      "depName": "hashicorp/consul/aws",
      "depType": "module",
    },
    {
      "currentValue": "v0.1.0",
      "datasource": "github-tags",
      "depName": "github.com/tieto-cem/terraform-aws-ecs-task-definition",
      "depType": "module",
      "packageName": "tieto-cem/terraform-aws-ecs-task-definition",
    },
    {
      "currentValue": "v0.1.0",
      "datasource": "github-tags",
      "depName": "github.com/tieto-cem/terraform-aws-ecs-task-definition",
      "depType": "module",
      "packageName": "tieto-cem/terraform-aws-ecs-task-definition",
    },
    {
      "datasource": "terraform-module",
      "depName": "terraform-aws-modules/security-group/aws",
      "depType": "module",
    },
    {
      "currentValue": "<= 2.4.0",
      "datasource": "terraform-module",
      "depName": "terraform-aws-modules/security-group/aws",
      "depType": "module",
    },
    {
      "currentValue": "1.28.3",
      "datasource": "terraform-module",
      "depName": "particuleio/addons/kubernetes",
      "depType": "module",
    },
    {
      "skipReason": "local",
    },
    {
      "skipReason": "no-source",
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() extracts bitbucket modules 1`] = `
{
  "deps": [
    {
      "currentValue": "v1.0.0",
      "datasource": "git-tags",
      "depName": "bitbucket.com/hashicorp/example",
      "depType": "module",
      "packageName": "https://bitbucket.com/hashicorp/example",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "git-tags",
      "depName": "bitbucket.com/hashicorp/example",
      "depType": "module",
      "packageName": "https://bitbucket.com/hashicorp/example",
    },
    {
      "currentValue": "next",
      "datasource": "git-tags",
      "depName": "bitbucket.com/hashicorp/example",
      "depType": "module",
      "packageName": "https://bitbucket.com/hashicorp/example",
    },
    {
      "currentValue": "v1.0.1",
      "datasource": "git-tags",
      "depName": "bitbucket.com/hashicorp/example",
      "depType": "module",
      "packageName": "https://bitbucket.com/hashicorp/example",
    },
    {
      "currentValue": "v1.0.2",
      "datasource": "git-tags",
      "depName": "bitbucket.com/hashicorp/example",
      "depType": "module",
      "packageName": "http://bitbucket.com/hashicorp/example",
    },
    {
      "currentValue": "v1.0.3",
      "datasource": "git-tags",
      "depName": "bitbucket.com/hashicorp/example",
      "depType": "module",
      "packageName": "ssh://git@bitbucket.com/hashicorp/example",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "bitbucket-tags",
      "depName": "hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "bitbucket-tags",
      "depName": "hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "bitbucket-tags",
      "depName": "hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "bitbucket-tags",
      "depName": "hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
    {
      "currentValue": "v1.0.0",
      "datasource": "bitbucket-tags",
      "depName": "hashicorp/example",
      "depType": "module",
      "packageName": "hashicorp/example",
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() extracts docker resources 1`] = `
{
  "deps": [
    {
      "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
      "currentDigest": undefined,
      "currentValue": "1.7.8",
      "datasource": "docker",
      "depName": "nginx",
      "depType": "docker_image",
      "replaceString": "nginx:1.7.8",
    },
    {
      "skipReason": "invalid-dependency-specification",
    },
    {
      "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
      "datasource": "docker",
      "depType": "docker_image",
      "replaceString": "\${data.docker_registry_image.ubuntu.name}",
      "skipReason": "contains-variable",
    },
    {
      "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
      "currentDigest": undefined,
      "currentValue": "1.7.8",
      "datasource": "docker",
      "depName": "nginx",
      "depType": "docker_container",
      "replaceString": "nginx:1.7.8",
    },
    {
      "skipReason": "invalid-dependency-specification",
    },
    {
      "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
      "currentDigest": undefined,
      "currentValue": "v1",
      "datasource": "docker",
      "depName": "repo.mycompany.com:8080/foo-service",
      "depType": "docker_service",
      "replaceString": "repo.mycompany.com:8080/foo-service:v1",
    },
    {
      "skipReason": "invalid-dependency-specification",
    },
    {
      "skipReason": "invalid-value",
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() extracts providers 1`] = `
{
  "deps": [
    {
      "currentValue": "1.36.1",
      "datasource": "terraform-provider",
      "depName": "azurerm",
      "depType": "provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/azurerm",
    },
    {
      "currentValue": "=2.4",
      "datasource": "terraform-provider",
      "depName": "gitlab",
      "depType": "provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/gitlab",
    },
    {
      "currentValue": "=1.3",
      "datasource": "terraform-provider",
      "depName": "gitlab1",
      "depType": "provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/gitlab1",
    },
    {
      "datasource": "terraform-provider",
      "depName": "helm",
      "depType": "provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/helm",
      "skipReason": "no-version",
    },
    {
      "currentValue": "V1.9",
      "datasource": "terraform-provider",
      "depName": "newrelic",
      "depType": "provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/newrelic",
    },
    {
      "currentValue": ">= 2.7.0",
      "datasource": "terraform-provider",
      "depName": "aws",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/aws",
    },
    {
      "currentValue": ">= 2.0.0",
      "datasource": "terraform-provider",
      "depName": "azurerm",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/azurerm",
    },
    {
      "currentValue": ">= 0.13",
      "datasource": "github-releases",
      "depName": "hashicorp/terraform",
      "depType": "required_version",
      "extractVersion": "v(?<version>.*)$",
      "lineNumber": 72,
    },
    {
      "currentValue": "2.7.2",
      "datasource": "terraform-provider",
      "depName": "docker",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/docker",
      "registryUrls": [
        "https://releases.hashicorp.com",
      ],
    },
    {
      "currentValue": "2.7.0",
      "datasource": "terraform-provider",
      "depName": "aws",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/aws",
    },
    {
      "currentValue": "=2.27.0",
      "datasource": "terraform-provider",
      "depName": "azurerm",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/azurerm",
    },
    {
      "currentValue": "1.2.4",
      "datasource": "terraform-provider",
      "depName": "invalid",
      "depType": "required_provider",
      "skipReason": "unsupported-url",
    },
    {
      "currentValue": "1.2.4",
      "datasource": "terraform-provider",
      "depName": "helm",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/helm",
    },
    {
      "currentValue": ">= 1.0",
      "datasource": "terraform-provider",
      "depName": "kubernetes",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "hashicorp/kubernetes",
      "registryUrls": [
        "https://terraform.example.com",
      ],
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() extracts terraform_version for tfe_workspace and ignores missing terraform_version keys 1`] = `
{
  "deps": [
    {
      "currentValue": "1.1.6",
      "datasource": "github-releases",
      "depName": "hashicorp/terraform",
      "depType": "tfe_workspace",
      "extractVersion": "v(?<version>.*)$",
    },
    {
      "skipReason": "no-version",
    },
    {
      "currentValue": "1.1.9",
      "datasource": "github-releases",
      "depName": "hashicorp/terraform",
      "depType": "tfe_workspace",
      "extractVersion": "v(?<version>.*)$",
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() test terraform block with only requirement_terraform_version 1`] = `
{
  "deps": [
    {
      "currentValue": "1.0.0",
      "datasource": "github-releases",
      "depName": "hashicorp/terraform",
      "depType": "required_version",
      "extractVersion": "v(?<version>.*)$",
      "lineNumber": 1,
    },
  ],
}
`;

exports[`modules/manager/terraform/extract extractPackageFile() update lockfile constraints with range strategy update-lockfile 1`] = `
{
  "deps": [
    {
      "currentValue": "~> 3.0",
      "datasource": "terraform-provider",
      "depName": "aws",
      "depType": "required_provider",
      "lockedVersion": "3.1.0",
      "packageName": "hashicorp/aws",
    },
    {
      "currentValue": "~> 2.50.0",
      "datasource": "terraform-provider",
      "depName": "azurerm",
      "depType": "required_provider",
      "lockedVersion": "2.50.0",
      "packageName": "hashicorp/azurerm",
    },
    {
      "currentValue": ">= 1.0",
      "datasource": "terraform-provider",
      "depName": "kubernetes",
      "depType": "required_provider",
      "lockedVersion": undefined,
      "packageName": "example/kubernetes",
      "registryUrls": [
        "https://terraform.example.com",
      ],
    },
  ],
}
`;
